[package]
name = "new_reader_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
curl = "0.4.44"
filedescriptor = "0.8.2"
reqwest = "0.11.14"
socket2 = { version = "0.4.7", features = ["all"] }
