[package]
name = "new-reader-rs"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.4"
curl = "0.4"
filedescriptor = "0.8"
isahc = "1.7"
socket2 = { version = "0.4", features = ["all"] }
